--- a/views/community.ejs
+++ b/views/community.ejs
@@ -24,7 +24,7 @@
         <span>🏆</span> Leaderboard
     </button>
     <button class="tab-btn" onclick="switchTab('profile-settings')">
-        <span>⚙️</span> Settings
+        <span>⚙️</span> Comumunity Settings
     </button>
 </div>
 
