--- a/views/community.ejs
+++ b/views/community.ejs
@@ -51,7 +51,7 @@
     
     <!-- Followers List -->
     <div id="followers-list">
-        <h3 style="margin-bottom: 1rem;">👥 Your Followers</h3>
+        <h3 style="margin-bottom: 1rem;">👥 Following</h3>
         <div id="followers-container" class="users-grid">
             <p style="text-align: center; padding: 2rem; color: #6b7280;">Loading followers...</p>
         </div>
